fixe small errors